--- a/.github/workflows/cobrinha.yml
+++ b/.github/workflows/cobrinha.yml
@@ -13,12 +13,12 @@ jobs:
       - uses: Platane/snk@master
         id: snake-gif
         with:
-          github user name: ViniciusVsss
-          svg out path: dist/github-contribution-grid-snake.svg
+          github_user_name: ViniciusVsss
+          svg_out_path: dist/github-contribution-grid-snake.svg
           
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
-          target branch: output
-          build dir: dist
+          target_branch: output
+          build_dir: dist
         env:
-          GITHUB TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
